--- a/Public/Css/style.css
+++ b/Public/Css/style.css
@@ -1,64 +1,102 @@
-html, body, .grid-container { height: 100%; margin: 0; }
+html,
+body,
+.grid-container {
+  height: 100%;
+  margin: 0;
+  color: rgb(255, 255, 255);
+  background-color: rgb(21, 153, 87);
+  background-image: linear-gradient(120deg, rgb(21, 87, 153), rgb(21, 153, 87));
+}
 
 .grid-container {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 0.3fr 1.2fr 2fr 0.5fr;
+
 }
 
-.personalInfo { grid-area: 1 / 1 / 2 / 2; }
+.personalInfo {
+  grid-area: 1 / 1 / 2 / 2;
+}
 
-.experience { grid-area: 2 / 1 / 3 / 2; }
+.experience {
+  grid-area: 2 / 1 / 3 / 2;
+}
 
 .skill {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 0.2fr 1fr 1fr 1fr;
   grid-area: 3 / 1 / 4 / 2;
+  background-image: linear-gradient(to top, rgb(52, 55, 58), rgb(31, 33, 35));
+  background-color: initial;
 }
 
-.skillTitle { grid-area: 1 / 1 / 2 / 5; }
+.skillTitle {
+  grid-area: 1 / 1 / 2 / 5;
+}
 
-.cSharp { grid-area: 2 / 1 / 3 / 2; }
+.cSharp {
+  grid-area: 2 / 1 / 3 / 2;
+}
 
-.php { grid-area: 2 / 2 / 3 / 3; }
+.php {
+  grid-area: 2 / 2 / 3 / 3;
+}
 
-.front-end { grid-area: 2 / 3 / 3 / 4; }
+.front-end {
+  grid-area: 2 / 3 / 3 / 4;
+}
 
-.database { grid-area: 2 / 4 / 3 / 5; }
+.database {
+  grid-area: 2 / 4 / 3 / 5;
+}
 
-.dataExchange { grid-area: 3 / 1 / 4 / 2; }
+.dataExchange {
+  grid-area: 3 / 1 / 4 / 2;
+}
 
-.ide { grid-area: 3 / 2 / 4 / 3; }
+.ide {
+  grid-area: 3 / 2 / 4 / 3;
+}
 
-.versionControl { grid-area: 3 / 3 / 4 / 4; }
+.versionControl {
+  grid-area: 3 / 3 / 4 / 4;
+}
 
-.virtualMachine { grid-area: 3 / 4 / 4 / 5; }
+.virtualMachine {
+  grid-area: 3 / 4 / 4 / 5;
+}
 
-.tools { grid-area: 4 / 1 / 5 / 2; }
+.tools {
+  grid-area: 4 / 1 / 5 / 2;
+}
 
-.language { grid-area: 4 / 2 / 5 / 3; }
+.language {
+  grid-area: 4 / 2 / 5 / 3;
+}
 
-.os { grid-area: 4 / 3 / 5 / 4; }
+.os {
+  grid-area: 4 / 3 / 5 / 4;
+}
 
-.others { grid-area: 4 / 4 / 5 / 5; }
+.others {
+  grid-area: 4 / 4 / 5 / 5;
+}
 
-.education { grid-area: 4 / 1 / 5 / 2; }
+.education {
+  grid-area: 4 / 1 / 5 / 2;
+}
 
 
-h1{
+h1 {
   border-bottom: 5px solid grey;
 }
-h3{
+
+h3 {
   text-decoration-line: underline;
 }
 
-h4{
+h4 {
   border-bottom: 3px solid lightgrey;
 }
-
-
-
-
-
-
