--- a/Public/Css/style.css
+++ b/Public/Css/style.css
@@ -8,6 +8,11 @@ body,
   background-image: linear-gradient(120deg, rgb(21, 87, 153), rgb(21, 153, 87));
 }
 
+body
+{
+  font-family:'Times New Roman', Times, serif;
+}
+
 .grid-container {
   display: grid;
   grid-template-columns: 1fr;
